# NYC-Taxi-Analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.tmp_dagster_home_wxbs_y5m/history/: runs.db
.tmp_dagster_home_wxbs_y5m/history/runs/: 89205361-b410-4f83-a878-77a77f87b4ad.db  a90a1ba2-849d-4914-b255-ed929421effc.db  index.db
.tmp_dagster_home_wxbs_y5m/schedules/: schedules.db
alerts/: alert_rules.yml  alert_runner.py  anomaly_detection.py  init_alerts.sql  init_drivers.sql  root_cause.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/marts/dimensions/: dim_date.sql  dim_hour.sql  dim_taxi_zone.sql
dbt/models/marts/facts/: fact_trips.sql
dbt/models/marts/kpis/: mart_kpis_by_payment_daily.sql  mart_kpis_daily.sql  (+2 more)
dbt/models/sources/: sources.yml
dbt/models/staging/: stg_taxi_zones.sql  stg_yellow_trips.sql
docker/superset/: Dockerfile
docs/: demo_script.md  demo_script_sprint2.md  demo_script_sprint3.md  demo_script_sprint4.md  demo_script_sprint5.md  demo_script_sprint6.md  demo_script_sprint7.md  kpi_definitions.md  runbook.md  superset_dashboard_guide.md
gx/: great_expectations.yml
gx/checkpoints/: checkpoint_critical.yml
gx/expectations/: .ge_store_backend_id  suite_critical_integrity.json
orchestration/: definitions.py
scripts/: download_taxi_zones.py  download_tlc_parquet.py  forecast_trips.py  ingest_production_sample.py  load_parquet_to_postgres.py  make_dev_sample.py  run_gx.py  setup_gx.py  validate_env.py
tests/: test_anomaly.py
warehouse/: init.sql
